k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime-property
  labels:
    app: prime-property
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: prime-property
