k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prime-property
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prime-pro.irhamu.dev
    secretName: prime-property-tls
  rules:
  - host: prime-pro.irhamu.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prime-property
            port:
              number: 80
